Fix for insights button spacing

--- a/src/components/bloggrid/bloggrid.css
+++ b/src/components/bloggrid/bloggrid.css
@@ -1,7 +1,7 @@
 @import '../settings.css';
 
 .BlogGrid {
-    padding-top: 100px;
+    padding-bottom: 60px;
 }
 
 .BlogGrid > a {
